tests/test_files/valid_files_sintatic/if.c
int x;
if (x < 10) {
    x = 0;
} else {
    x = 1;
}
