tests/test_files/invalid_files_semantic/undeclared_var.c
int main() {
    x = 10;    // ❌ x não foi declarada
    return 0;
}
